# bmi-geotiff

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  CREDITS.md  LICENSE.md  MANIFEST.in  Makefile  README.md  SUPPORT.md  environment.yml  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: build-test-ci.yml  docs.yml  flake8.yml  format.yml  lint.yml  test-notebooks.yml  test.yml
bmi_geotiff/: __init__.py  bmi.py  io.py
docs/: requirements.txt
docs/source/: CHANGES.md  CHANGES.rst  LICENSE.rst  README.rst  conf.py  index.md  index.rst
docs/source/_templates/: links.html  sidebarintro.html
docs/source/api/: bmi_geotiff.rst  index.rst  modules.rst
examples/: README-bmi-geotiff.ipynb  README.md  RGB.byte.tif  bmi-geotiff.ipynb  config.yaml  example-pan.py  example-rgb.py  geotiff.ipynb  readme_example.py
tests/: test_io.py
