[project]
name = "bmi-geotiff"
description = "Access data and metadata in a GeoTIFF file through an API or a BMI"
authors = [
  {name = "Mark Piper", email = "mark.piper@colorado.edu"},
]
keywords = [
  "bmi",
  "geotiff",
  "raster",
  "data",
]
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyyaml",
  "xarray",
  "rasterio",
  "rioxarray",
  "bmipy",
]
dynamic = ["readme", "version"]

[project.urls]
Homepage = "https://csdms.colorado.edu"
Documentation = "https://bmi-geotiff.csdms.io/"
Repository = "https://github.com/csdms/bmi-geotiff"
Changelog = "https://github.com/csdms/bmi-geotiff/blob/main/CHANGES.md"
Forum = "https://forum.csdms.io"

[project.optional-dependencies]
dev = [
  "nox",
]
build = [
  "python-build",
  "twine",
  "zest.releaser"
]
testing = [
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "coverage",
  "coveralls",
]
docs = [
  "sphinx",
  "recommonmark",
  "pandoc",
]
examples = [
  "cartopy",
  "matplotlib",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md", "CREDITS.md", "LICENSE.md"], content-type = "text/markdown"}
version = {attr = "bmi_geotiff._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["bmi_geotiff*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["bmi_geotiff", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
  --ignore setup.py
  --tb native
  --strict-markers
  --durations 16
  --doctest-modules
  -vvv
  --ignore-glob=examples/*.py
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.coverage.run]
relative_files = true

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "bmi_geotiff/_version.py"
