[metadata]
name = bmi-geotiff
version = 0.2.2
author = Mark Piper
author_email = mark.piper@colorado.edu
description = Access data and metadata in a GeoTIFF file through an API or a BMI
long_description = file: README.md, CHANGES.md, CONTRIBUTING.md, CITATION.md, CREDITS.md, LICENSE.md
long_description_content_type = text/markdown
keywords = bmi, geotiff, data
license = MIT License
url = https://github.com/csdms/bmi-geotiff
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml
    rasterio
    xarray
    bmipy

[options.packages.find]
exclude =
    tests
    examples

[flake8]
exclude = docs
ignore =
	E203
	E501
	W503
max-line-length = 88

[zest.releaser]
tag-format = v{version}
